feat(ui): add plus button on Gold in top bar → opens Buy Gold screen
- currencies_strip: added btn_add_gold (+ icon) next to gold amount
- MainActivity: wired click to navigate to buyGoldFragment
- New BuyGoldFragment (offline placeholder) with quick add-gold buttons
- Updated nav_graph with buyGoldFragment destination

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AkthosIdle</string>
     <string name="add_gold">Add gold</string>
+    <string name="buy_gold_title">Buy gold</string>
+
 </resources>
