feat(skills): add skill list with icons, names, and levels + navigation to detail
- Implemented `row_skill.xml` for skill rows (icon + name + level)
- Added `SkillsAdapter` to render skills in RecyclerView
- Updated `SkillsFragment` to load player skills, bind icons, and display data
- Clicking a skill now navigates to `SkillDetailFragment` with `skillId` arg
- Prepared per-skill icon mapping with fallback to generic icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,13 @@
     <string name="app_name">AkthosIdle</string>
     <string name="add_gold">Add gold</string>
     <string name="buy_gold_title">Buy gold</string>
-
+    <string name="pick_a_resource_first">Pick a resource first</string>
+    <string name="select_resource">Select Resource</string>
+    <string name="completed_fmt">Completed: %1$s</string>
+    <string name="level_up_fmt">%1$s leveled to %2$d!</string>
+    <string name="gathering_fmt">Gathering %1$s…</string>
+    <string name="req_and_duration_fmt">Req Lv %1$d • %2$ds</string>
+    <string name="idle">Idle</string>
+    <string name="play">Play</string>
+    <string name="stop">Stop</string>
 </resources>
