--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="idle">Idle</string>
     <string name="play">Play</string>
     <string name="stop">Stop</string>
+    <string name="no_actions_available">No actions available for this skill yet</string>
 </resources>
