feat(basecamp,settings): add Basecamp hub + Settings (backup/import/reset) and wire into nav
- Basecamp (Home hub):
  - New BasecampFragment with 3-column tile grid
  - Tiles: Shop, Quests, Achievements, Bank, Forge, Map, Settings, About
- Settings screen:
  - New SettingsFragment (Preference screen)
  - Actions: Manual Save, Export Save (clipboard), Import Save (JSON), Reset Progress
  - Placeholders: Auto-respawn, Auto-scroll combat log, XP/hour window selector
- UI resources:
  - fragment_basecamp.xml, item_basecamp_tile.xml
  - prefs_settings.xml + arrays for XP window labels/values
- Navigation: add basecampFragment and settingsFragment to nav_graph
- Dependencies: add androidx.preference and cardview
- UX note: Bottom-nav “Settings” can optionally be retargeted to Basecamp (Settings remains accessible via Basecamp tile)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
 
     <string name="open_shop">Open Shop</string>
     <string name="open_shop_summary">Buy gear, potions, and supplies</string>
+
+    <string name="running">Running</string>
+    <string name="level_up_short">Level up!</string>
+    <string name="completed_fmt">Completed: %1$s</string>
 </resources>
